--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
             <table align=center cellspacing=50>
               <tr>
-                <td><iframe src="https://giphy.com/embed/TdcyJrYT9oXYSpt9UC" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/stickers/coschoolofmines-steam-colorado-stem-TdcyJrYT9oXYSpt9UC"></a></p></td>
+                <td><iframe src="https://giphy.com/embed/TdcyJrYT9oXYSpt9UC" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></td>
                 <td><h3><strong>Student Council Member</strong></h3><br>
                 2019-2020</td>
                 <td><h4>Agni House Cultural Captain</h4>Being a house Cultural Captain, I had helped my house members to excel in what they are to do. I feel to mention here that my house had won the Overall Championship for the year 2020.  As council members, we had organised inter and intra school events like CS Trophy(sports event),CS Fete(entrepreneurship event),Farewell 2020,Sports day,Cultural day and many other smaller competitions. We had also organised and participated in many public awareness creating programs through flashmobs and common assemblies.
@@ -55,13 +55,13 @@
                 held to call on the alarming situations prevailing in the world. I am also proud to say that I and my team in all my MUNs had successfully passed several resolutions and amendments pertaining to the given issues.
 
                 <br><a href="https://docs.google.com/document/d/1zNH92PARIrj4W0Cj7CEgdiAQampMDse_-bY6UBiNjy4/edit">Certificate of Participation</a></td>
-                <td><iframe src="https://giphy.com/embed/5kFzqdhrL9RNDLnZcG" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/unescap-life-water-5kFzqdhrL9RNDLnZcG"></a></p></td>
+                <td><iframe src="https://giphy.com/embed/5kFzqdhrL9RNDLnZcG" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></td>
               </tr>
             </table>
 
             <table align=center cellspacing=50>
               <tr>
-                <td><iframe src="https://giphy.com/embed/D9DMcRSmAaBx5SR9xW" width="479" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/stickers/study-learning-learn-D9DMcRSmAaBx5SR9xW"></a></p></td>
+                <td><iframe src="https://giphy.com/embed/D9DMcRSmAaBx5SR9xW" width="479" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></td>
                 <td><h3><strong>Extra Courses</strong></h3>
                 2020</td>
                 <td><h4>Online and Offline Courses and Workshops</h4>
@@ -85,13 +85,13 @@
                     <li>Inter house cultural fest Drama winner</li>
                   </ul>
                 <a href="https://docs.google.com/document/d/1zNH92PARIrj4W0Cj7CEgdiAQampMDse_-bY6UBiNjy4/edit">Certificate of Participation</a></td>
-                <td><iframe src="https://giphy.com/embed/SsN96j9TCujGNLkDsH" width="368" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/stickers/transparent-SsN96j9TCujGNLkDsH"></a></p></td>
+                <td><iframe src="https://giphy.com/embed/SsN96j9TCujGNLkDsH" width="368" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></td>
               </tr>
             </table>
 
             <table align=center cellspacing=50>
               <tr>
-                <td><iframe src="https://giphy.com/embed/QwzfFfCV8N2coJu0N6" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/stickers/colorful-asa-puzzle-pieces-QwzfFfCV8N2coJu0N6"></a></p></td>
+                <td><iframe src="https://giphy.com/embed/QwzfFfCV8N2coJu0N6" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></td>
                 <td><h3><strong>My Hobbies and Views</strong></h3>
                 2019-2020</td>
                 <td><h4>Do what you Love to.</h4>
