--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <iframe class="topcloud" src="https://giphy.com/embed/UTjcbajwj8LqouMGRN" width="200" height="200" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p></p>
 
       <h1>I'm <br>Harish Kumar</h1>
-      <p>persuing BE.Computer Science.</p>
+      <p>Pursuing BE.Computer Science.</p>
       <iframe class="bottomcloud" src="https://giphy.com/embed/UTjcbajwj8LqouMGRN" width="200" height="200" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p></p>
       <img class="mountain" src="https://nikhilb.co.in/assets/img/content/home/masthead/land.svg" alt="mountain">
     </div>
